--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,6 +12,7 @@
     <header>
         <a href="#gallery">Gallery</a>
         <a href="#pricing">Pricing</a>
+        <button id="cart">cart</button>
     </header>
     <main class="main-content">
         <!--site intro-->
@@ -19,18 +21,18 @@
         </div >
         <!--about-->
         <h3>about</h3>
-        <p> Hello! This is where I will be giving information about potential pricing, and showing recent art.</p>
+        <p> Need a bit of color in your life? buy one of my peices to decorate as you'd like!</p>
         <!--image gallery-->
-        <section>
+        <section id="productList">
+            <!--
             <a name="gallery"></a>
-            <p>move your mouse over an image to see it closer!</p>
-            <table>
-                <tr> 
-                    <td> <img class="gallery-image" src="https://i.postimg.cc/T1dhhD9Y/IMG-6140.jpg" > </td>
-                  
-                    <td> <img class="gallery-image"src="https://i.postimg.cc/nLxRhcc1/IMG-1842.jpg"> </td>
-                </tr>
-            </table> 
+                 <div class="product-listing">
+                    <p class="item-cost">$20</p>
+                    <img class="gallery-image" src="https://i.postimg.cc/T1dhhD9Y/IMG-6140.jpg"> 
+                    <p>image descripiton blah blah blah</p> 
+                    <button onclick=""> add to cart</button>
+                 </div>  -->
+                
         </section>
         <!--pricing information-->
             <h3>Commisions</h3>
