made buy and cart buttons work

--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
 
         <div id="cartOverlay">
             <div id="viewCart">
-                <h2>Cart</h2>
-                <p>This is some more text</p>
+                <button id="exitButton" onclick="exitCart()">exit cart</button>
+                <h2>Items in your cart</h2>
+
             </div>
         </div>
     </main>
