--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <br> <hr>
             <h3>Commisions</h3>
             <p> None of the pre-made pieces fit your fancy? find out the price of a custom one!</p> <br>
-            <h2>Total: 0$</h2> <br>
+            <h2 Id="commissionTotal">Total: 0$</h2> <br>
           <form id="lineFinish">
             <label for="line">Line:</label>
             <select id="line">
