made everything pretty

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!--top bar-->
     <header>
-        <button onclick="goToCart()" id="cart">cart</button>
+        <button onclick="goToCart()" id="cart">cart 🛒</button>
     </header>
     <main class="main-content">
         <!--site intro-->
@@ -84,7 +84,8 @@
         <div id="cartOverlay">
             <div id="viewCart">
                 <button id="exitButton" onclick="exitCart()">exit cart</button>
-                <h2>Items in your cart</h2>
+                <h2>Items in your cart:</h2>
+                <hr>
 
             </div>
         </div>
